--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
 			function onSuccess(imageURI) {
 			    //var image = document.getElementById('myImage');
 			    //image.src = "data:image/jpeg;base64," + imageData;
- 
+ 				
+ 				alert(imageURI);
+
 			    var canvas = new fabric.Canvas('c');
 		    	canvas.setBackgroundImage(imageURI, canvas.renderAll.bind(canvas));
+		    	
+		    	alert(2)
 
 				fabric.Image.fromURL('toldo.png', function(img) {
 				  img.scale(.5).set({
