--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
  		function takePicture() {
  			navigator.camera.getPicture(onSuccess, onFail, { quality: 50,
-			    destinationType: Camera.DestinationType.FILE_URI
+			    destinationType: Camera.DestinationType.NATIVE_URI
 			}); 
 
 			function onSuccess(imageURI) {
