--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
  			navigator.camera.getPicture(onSuccess, onFail, { 
  				quality: 50,
 			    destinationType: Camera.DestinationType.FILE_URI,
-			    saveToPhotoAlbum:TRUE,
+			    saveToPhotoAlbum:true,
 			    sourceType : Camera.PictureSourceType.SAVEDPHOTOALBUM
 			}); 
 
