--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
  			navigator.camera.getPicture(onSuccess, onFail, { 
  				quality: 50,
 			    destinationType: Camera.DestinationType.FILE_URI,
-			    saveToPhotoAlbum:true
-			    //,sourceType : Camera.PictureSourceType.SAVEDPHOTOALBUM
+			    saveToPhotoAlbum:true,
+			    sourceType : Camera.PictureSourceType.SAVEDPHOTOALBUM
 			}); 
 
 			function onSuccess(imageURI) {
