--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  				quality: 50,
 			    destinationType: Camera.DestinationType.FILE_URI,
 			    saveToPhotoAlbum:true,
-			    sourceType : Camera.PictureSourceType.SAVEDPHOTOALBUM,
+			    sourceType : Camera.PictureSourceType.CAMERA,
 			    targetWidth:windowWidth,
 			    targetHeight:windowHeight
 			}); 
