--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			    destinationType: Camera.DestinationType.FILE_URI,
 			    saveToPhotoAlbum:true,
 			    sourceType : Camera.PictureSourceType.PHOTOLIBRARY
-			    encodingType: Camera.EncodingType.PNG,
+			    encodingType: Camera.EncodingType.PNG
 			}); 
 
 			function onSuccess(imageURI) {
