--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
  				quality: 50,
 			    destinationType: Camera.DestinationType.FILE_URI,
 			    saveToPhotoAlbum:true,
-			    sourceType : Camera.PictureSourceType.PHOTOLIBRARY
+			    sourceType : Camera.PictureSourceType.PHOTOLIBRARY,
 			    encodingType: Camera.EncodingType.PNG
 			}); 
 
